fix: no horizontal scroll

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,7 @@
+html {
+  overflow-x: hidden;
+}
+
 img[alt~="portrait"] {
   position:absolute;
   top:-32px;
